[package]
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
categories = ["memory-management", "web-programming", "no-std"]
description = "wee_alloc: The Wasm-Enabled, Elfin Allocator"
license = "MPL-2.0"
name = "wee_alloc"
readme = "../README.md"
repository = "https://github.com/fitzgen/wee_alloc"
version = "0.2.0"

[badges]
travis-ci = { repository = "fitzgen/wee_alloc" }

[features]
default = ["size_classes"]

# Enable extra, expensive integrity allocations.
extra_assertions = []

# Enable size classes for amortized *O(1)* small allocations.
size_classes = []

# This is for internal use only.
use_std_for_test_debugging = []

[dependencies]
memory_units = "0.4.0"

[target.'cfg(all(unix, not(target_arch = "wasm32")))'.dependencies.libc]
default-features = false
version = "0.2"

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies.mmap-alloc]
version = "0.2"

[target.'cfg(target_os = "windows")'.dependencies.winapi]
version = "0.3"
features = ["memoryapi", "synchapi", "winbase"]
