[package]
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
categories = ["memory-management", "web-programming", "no-std", "wasm"]
description = "wee_alloc: The Wasm-Enabled, Elfin Allocator"
license = "MPL-2.0"
name = "wee_alloc"
readme = "../README.md"
repository = "https://github.com/fitzgen/wee_alloc"
version = "0.3.0"

[badges]
travis-ci = { repository = "fitzgen/wee_alloc" }

[features]
default = ["size_classes"]

# Enable extra, expensive integrity allocations.
extra_assertions = []

# Enable size classes for amortized *O(1)* small allocations.
size_classes = []

# This is for internal use only.
use_std_for_test_debugging = []

static_array_backend = []

[dependencies]
memory_units = "0.4.0"
cfg-if = "0.1.2"
unreachable = "1.0.0"

[dependencies.spin]
version = "0.4"
default-features = false
features = ["const_fn"]

[target.'cfg(all(unix, not(target_arch = "wasm32")))'.dependencies.libc]
default-features = false
version = "0.2"

[target.'cfg(target_os = "windows")'.dependencies.winapi]
version = "0.3"
features = ["memoryapi", "synchapi", "winbase"]
